--- a/Strings/AppResources.hu.resx
+++ b/Strings/AppResources.hu.resx
@@ -778,7 +778,7 @@
     <comment>Pushback</comment>
   </data>
   <data name="Commands.ReverseThrust" xml:space="preserve">
-    <value>Fordított tolóerő ?</value>
+    <value>Sugárfordító</value>
     <comment>Reverse Thrust</comment>
   </data>
   <data name="Commands.RollAxis" xml:space="preserve">
@@ -1122,7 +1122,7 @@
     <comment>Toggle Flight Path Vector</comment>
   </data>
   <data name="Commands.ToggleHUD" xml:space="preserve">
-    <value>LHUD Bekapcsolása</value>
+    <value>HUD Bekapcsolása</value>
     <comment>Toggle HUD</comment>
   </data>
   <data name="Commands.TogglePause" xml:space="preserve">
@@ -1146,7 +1146,7 @@
     <comment>Zoom Out</comment>
   </data>
   <data name="GameMenu.20sAgo" xml:space="preserve">
-    <value>20mp Ezelőtt</value>
+    <value>20mp-el Ezelőtt</value>
     <comment>20s Ago</comment>
   </data>
   <data name="GameMenu.Calibrate" xml:space="preserve">
@@ -1166,7 +1166,7 @@
     <comment>End Flight</comment>
   </data>
   <data name="GameMenu.EndSession" xml:space="preserve">
-    <value>Munkamenet Vége</value>
+    <value>Irányítás Vége</value>
     <comment>End Session (ATC)</comment>
   </data>
   <data name="GameMenu.Paused" xml:space="preserve">
@@ -1378,7 +1378,7 @@
     <comment>Normal</comment>
   </data>
   <data name="SplashScreen.LoadingSession" xml:space="preserve">
-    <value>Munkamenet betöltése</value>
+    <value>Irányítás betöltése</value>
     <comment>(ATC)</comment>
   </data>
   <data name="AircraftPage.LiveryWillBeDownloaded" xml:space="preserve">
@@ -1578,7 +1578,7 @@
     <comment>Search airports</comment>
   </data>
   <data name="ItemSearchControl.SearchAirportsAndWaypoints" xml:space="preserve">
-    <value>Repülőterek/pontok keresése ?</value>
+    <value>Repülőterek/pontok keresése</value>
     <comment>Search airports/waypoints</comment>
   </data>
   <data name="LocationPage.NoAvailableStartLocations" xml:space="preserve">
