--- a/Strings/AppResources.zh.resx
+++ b/Strings/AppResources.zh.resx
@@ -194,11 +194,11 @@
     <comment>Live Data (All Servers)</comment>
   </data>
   <data name="Error.AccountAlreadyInUse" xml:space="preserve">
-    <value>正在连接的账户已经绑定了另一个Infinite Flight Pro订阅 (错误代码 {0})</value>
+    <value>正在连接的账号已经绑定了另一个Infinite Flight Pro订阅 (错误代码 {0})</value>
     <comment>The account you are trying to connect is already linked with another Infinite Flight Pro subscription (error code {0})</comment>
   </data>
   <data name="Error.AccountSuspended" xml:space="preserve">
-    <value>该账户已经被封禁 (错误代码 {0})</value>
+    <value>该账号已经被封禁 (错误代码 {0})</value>
     <comment>Your account has been suspended (error code {0})</comment>
   </data>
   <data name="Error.ATCSessionNotFound" xml:space="preserve">
@@ -206,7 +206,7 @@
     <comment>We can't find information about this ATC session (error code {0})</comment>
   </data>
   <data name="Error.AuthProviderFailure" xml:space="preserve">
-    <value>验证该第三方账户时遇到了错误 (错误代码 {0})</value>
+    <value>验证该第三方账号时遇到了错误 (错误代码 {0})</value>
     <comment>There was an error validating this account with the provider (error code {0})</comment>
   </data>
   <data name="Error.DataNotLoaded" xml:space="preserve">
@@ -218,7 +218,7 @@
     <comment>There was an error on the Infinite Flight servers. Try again shortly (error code {0})</comment>
   </data>
   <data name="Error.EndpointNotAuthorized" xml:space="preserve">
-    <value>该账户不能进行该操作，请联系玩家支持 (错误代码 {0})</value>
+    <value>该账号不能进行该操作，请联系玩家支持 (错误代码 {0})</value>
     <comment>Your account isn't allowed to carry out this action, please contact support (error code {0})</comment>
   </data>
   <data name="Error.EndpointTimeout" xml:space="preserve">
@@ -274,7 +274,7 @@
     <comment>Sign in to use a subscription bought on another device</comment>
   </data>
   <data name="LoginSubscriptionPage.ExistingAccount" xml:space="preserve">
-    <value>我已经拥有了一个账户</value>
+    <value>我已经拥有了一个账号</value>
     <comment>I already have an account</comment>
   </data>
   <data name="LoginSubscriptionPage.MoreInfo" xml:space="preserve">
@@ -302,7 +302,7 @@
     <comment>About (button title)</comment>
   </data>
   <data name="Settings.Account" xml:space="preserve">
-    <value>账户</value>
+    <value>账号</value>
     <comment>Account (tab title)</comment>
   </data>
   <data name="Settings.Controls" xml:space="preserve">
@@ -450,11 +450,11 @@
     <comment>Very High (option)</comment>
   </data>
   <data name="Settings.SendCurrentLog" xml:space="preserve">
-    <value>发送当前记录</value>
+    <value>发送当前日志</value>
     <comment>Send Current Log (button text)</comment>
   </data>
   <data name="Settings.SendPreviousLog" xml:space="preserve">
-    <value>发送以往记录</value>
+    <value>发送以往日志</value>
     <comment>Send Previous Log (button text)</comment>
   </data>
   <data name="Settings.Sounds" xml:space="preserve">
@@ -678,7 +678,7 @@
     <comment>Setting Airplane Count to None will not show other aircraft when flying online, and it is your responsibility to maintain separation with other aircraft.</comment>
   </data>
   <data name="Settings.Multiplayer.ShowUsernameInFlight.Subtitle" xml:space="preserve">
-    <value>在飞行时显示你的用户名。不勾选则保持匿名</value>
+    <value>在飞行时显示你的用户名，取消勾选则保持匿名</value>
     <comment>Display your username in-flight. Uncheck to remain anonymous</comment>
   </data>
   <data name="Settings.Multiplayer.ShowUsernameInFlight.Title" xml:space="preserve">
@@ -870,7 +870,7 @@
     <comment>You've connected {0} with Infinite Flight. Do you want to unlink this profile?</comment>
   </data>
   <data name="Settings.Account.DiscourseConnect" xml:space="preserve">
-    <value>绑定账户</value>
+    <value>绑定账号</value>
     <comment>Connect (Discourse)</comment>
   </data>
   <data name="Settings.Account.Forum.LinkedAccount" xml:space="preserve">
@@ -882,7 +882,7 @@
     <comment>Community Forum Account</comment>
   </data>
   <data name="Settings.Account.Forum.UnlinkedAccount" xml:space="preserve">
-    <value>绑定你的Infinite Flight社区账户以在飞行时显示你的用户名。绑定后你还可以在更换设备时重新登录以恢复数据。</value>
+    <value>绑定你的Infinite Flight社区账号以在飞行时显示你的用户名。绑定后你还可以在更换设备时重新登录以恢复数据。</value>
     <comment>Connect an Infinite Flight Community profile to show your username in-flight. This connection also allows you to sign in if you switch device platforms.</comment>
   </data>
   <data name="Settings.Account.ManageSubscription" xml:space="preserve">
@@ -934,7 +934,7 @@
     <comment>Your Infinite Flight Pro Subscription</comment>
   </data>
   <data name="Settings.Account.SwitchAccount.Subtitle" xml:space="preserve">
-    <value>使用不同的Infinite Flight账户以使用在另一设备上购买的订阅</value>
+    <value>使用不同的Infinite Flight账号以使用在另一设备上购买的订阅</value>
     <comment>Use a different Infinite Flight account to access a subscription bought on another device</comment>
   </data>
   <data name="Settings.Account.SwitchAccount.Title" xml:space="preserve">
@@ -1198,7 +1198,7 @@
     <comment>Take Off</comment>
   </data>
   <data name="GameMenu.TapToCalibrate" xml:space="preserve">
-    <value>点击屏幕以校准并开始飞行</value>
+    <value>点击屏幕校准设备并开始飞行</value>
     <comment>Tap screen to calibrate and start</comment>
   </data>
   <data name="GameMenu.Time" xml:space="preserve">
@@ -1282,7 +1282,7 @@
     <comment>Sunset</comment>
   </data>
   <data name="UserAccountControl.YourAccount" xml:space="preserve">
-    <value>你的账户</value>
+    <value>你的账号</value>
     <comment>Your Account</comment>
   </data>
   <data name="WeatherPage.CirrusCloudLayer" xml:space="preserve">
@@ -1446,7 +1446,7 @@
     <comment>Arrivals</comment>
   </data>
   <data name="ATCJobBoardControl.ActiveFIRs" xml:space="preserve">
-    <value>{0} 个开放飞行情报区</value>
+    <value>{0} 个区域管制在线</value>
     <comment>{0} Active Flight Information Regions</comment>
   </data>
   <data name="ATCJobBoardControl.AirspaceActivity" xml:space="preserve">
@@ -1790,7 +1790,7 @@
     <comment>Settings</comment>
   </data>
   <data name="MenuPageBase.AircraftTooLarge" xml:space="preserve">
-    <value>{0} 飞机过大，无法停靠在位于 {2} 的 {1} 机位。 请更换出发地点。</value>
+    <value>{0} 飞机过大，无法停靠在位于 {2} 的 {1} 机位。 请更换停机位。</value>
     <comment>The {aircraft} is too large for current starting point {start location name} at {airport name}.\n\nPlease change the start location.</comment>
   </data>
   <data name="MenuPageBase.ATC" xml:space="preserve">
@@ -2611,19 +2611,19 @@ Please ask to be assigned via the Scenery Editing forum first</comment>
 Check map for more information</comment>
   </data>
   <data name="UserAccountControl.Discord" xml:space="preserve">
-    <value>Discord账户</value>
+    <value>Discord账号</value>
     <comment>Discord Account</comment>
   </data>
   <data name="UserAccountControl.Discord.Linked" xml:space="preserve">
-    <value>Discord账户绑定成功，你现在可以加入Pro用户专属的Discord服务器！</value>
+    <value>Discord账号绑定成功，你现在可以加入Pro用户专属的Discord服务器！</value>
     <comment>Your Discord account has been linked and you have access to our Pro-only Discord server</comment>
   </data>
   <data name="UserAccountControl.Discord.Unlinked" xml:space="preserve">
-    <value>绑定你的Discord账户以加入Pro专属Discord服务器</value>
+    <value>绑定你的Discord账号以加入Pro专属Discord服务器</value>
     <comment>Link a Discord account to gain exclusive access to our Pro-only server</comment>
   </data>
   <data name="UserAccountControl.DiscordLinked.Message" xml:space="preserve">
-    <value>你的Discord账户已经成功绑定。你想要现在加入Infinite Flight Discord服务器吗？</value>
+    <value>你的Discord账号已经成功绑定。你想要现在加入Infinite Flight Discord服务器吗？</value>
     <comment>Your Discord account has been linked. Do you want to join the Infinite Flight Discord server now?</comment>
   </data>
   <data name="UserAccountControl.DiscordLinked.NotNow" xml:space="preserve">
@@ -2668,11 +2668,24 @@ Check map for more information</comment>
     <comment>Please maintain a safe distance with the aircraft ahead</comment>
   </data>
   <data name="LoginSubscriptionPage.NoSubscriptionFound" xml:space="preserve">
-    <value>已找到你的账户，但该账户尚未绑定Pro订阅</value>
+    <value>已找到你的账号，但该账号尚未绑定Pro订阅</value>
     <comment>We found your account but there is no active subscription associated to it.</comment>
   </data>
   <data name="IntroPage.Home" xml:space="preserve">
     <value>主页</value>
     <comment>Home</comment>
+  </data>
+  <data name="Error.CannotOpenBrowser" xml:space="preserve">
+    <value>无法打开链接。请确认已经安装了一个浏览器。
+若问题持续出现，请联系技术支持 (error code {0})</value>
+    <comment>No browser is available to open this link - ensure you have a browser installed. Contact support if the issue persists (error code {0})</comment>
+  </data>
+  <data name="Error.CouldNotGetFileSize" xml:space="preserve">
+    <value>无法连接至服务器，请检查互联网连接 (error code {0})</value>
+    <comment>Could not connect to the server, check your internet connection (error code {0})</comment>
+  </data>
+  <data name="GameModeSelection.NoAvailableServer" xml:space="preserve">
+    <value>无可用服务器</value>
+    <comment>No Available Server</comment>
   </data>
 </root>
